--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                             </li>
                         </ul>
                 </li>
-    <!--turnotarde-->
             </ul>
+<!--turnotarde-->
         </li>
-    </ul>
+    </div>
 </nav>
-
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="main.js"></script>
